# swagger_server/swagger/swagger.yaml
@@ -9,8 +9,8 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
-- url: https://virtserver.swaggerhub.com/JASPERVANDENBARG_1/tutorial/1.0.0
-  description: SwaggerHub API Auto Mocking
+# - url: https://virtserver.swaggerhub.com/JASPERVANDENBARG_1/tutorial/1.0.0
+#   description: SwaggerHub API Auto Mocking
 - url: https://virtserver.SwaggerHub.com/tutorial/1.0.0
   description: SwaggerHub API Auto Mocking
 paths:
@@ -63,10 +63,11 @@ paths:
           content:
             text/plain:
               schema:
-                type: string
+                type: number
+                format: integer
                 x-content-type: text/plain
         "400":
-          description: Bad request
+          description: invalid ID
           content:
             application/json:
               schema:
@@ -123,14 +124,16 @@ components:
         gradeRecords:
           type: array
           items:
-            type: string
+            $ref: '#/components/schemas/GradeRecord'
       example:
         student_id: 0.80082819046101150206595775671303272247314453125
         last_name: last_name
         first_name: first_name
         gradeRecords:
-        - gradeRecords
-        - gradeRecords
+        - grade: 6.0274563
+          subject_name: subject_name
+        - grade: 6.0274563
+          subject_name: subject_name
     GradeRecord:
       required:
       - grade
@@ -144,4 +147,7 @@ components:
           minimum: 0
           type: number
           format: float
+      example:
+        grade: 6.0274563
+        subject_name: subject_name
 
